# LlamaIndex-demo

./: pyproject.toml  requirements.txt
data/: data.txt
src/main/: run.py
src/main/common/: imports.py
src/main/json_output_input_files/: outputFormat_for_ashraf.json  project_1.json
src/main/model_runner/: initvertexai.py  model.py  run.py  system_instrcutions.py  user_input.py
src/main/rag_output_handler/: file_loader.py  json_processor.py  json_saver.py  usecase_processor.py
