[project]
name = "llamaindex-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohamed Aly",email = "m.e.abdelgawad@gmail.com"}
]
readme = "README.md"
requires-python = "~=3.13"
dependencies = [
    "llama-index (>=0.12.37,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
